# whimstan

./: .buildinfo  .flake8  .gitattributes  .gitignore  MANIFEST.in  README.md  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: API.doctree  modules.doctree  whimstan.database.catalog.doctree  whimstan.database.database.doctree  whimstan.database.doctree  whimstan.doctree  whimstan.fit.doctree  whimstan.fitter.doctree  whimstan.prep.doctree  whimstan.simulations.cloud.doctree  whimstan.simulations.doctree  whimstan.simulations.population_generator.doctree  whimstan.simulations.simulation.doctree  whimstan.spectral_plot.doctree  whimstan.utils.absori_precalc.doctree  whimstan.utils.doctree  whimstan.utils.format_conversions.doctree  whimstan.utils.package_data.doctree
.github/workflows/: build_test.yml  (+1 more)
_modules/: index.html
_sources/: index.rst.txt
api/: API.html  modules.html  whimstan.database.catalog.html  whimstan.database.database.html  whimstan.database.html  whimstan.fit.html  whimstan.fitter.html  whimstan.html  whimstan.prep.html  whimstan.simulations.cloud.html  whimstan.simulations.html  whimstan.simulations.population_generator.html  whimstan.simulations.simulation.html  whimstan.spectral_plot.html  whimstan.utils.absori_precalc.html  whimstan.utils.format_conversions.html  whimstan.utils.html  whimstan.utils.package_data.html
docs/: conf.py  index.rst
notebooks/: simulations.html  simulations.ipynb  working_with_data.html
whimstan/: __init__.py  _version.py  absori_precalc.py  catalog.py  coverters.py  database.py  fit.py  fitter.py  population_generator.py  prep.py  run.py  simulation.py  spectral_plot.py
(+116 files in other folders)
