[metadata]
name = whimstan
description = A tool for making posterior predicitive checks with 3ML
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/grburgess/whimstan
author_email = jmichaelburgess@gmail.com
author = J. Michael Burgess
requires_python = >=3.3.0
license = GPL-2+

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX

    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
#    Topic :: Scientific/Engineering :: Physics

project_urls =
    Bug Tracker = https://github.com/grburgess/whimstan/issues
    Source Code = https://github.com/grburgess/whimstan


[options]
packages = find:
install_requires =
    ipython
    threeml
    astromodels
    cmdstanpy
    arviz
    h5py
    numpy
    matplotlib
    natsort
    scipy
    
tests_require =
    pytest
    pytest-codecov


[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = --color=yes --cov=whimstan --cov-report=term -ra --ignore=whimstan/test --ignore=whimstan/_version.py
log_cli = 1
log_cli_level = INFO
testpaths = whimstan/test 
norecursedirs = whimstan/test


[versioneer]
VCS=git
style=pep440
versionfile_source=whimstan/_version.py
versionfile_build=whimstan/_version.py
tag_prefix=v
parentdir_prefix=whimstan-
